--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "test",
     "type": "module",
-    "main": "index.js",
+    "main": "./src/index.js",
     "scripts": {
-        "dev": "node --watch index.js"
+        "dev": "node --watch ./src/index.js"
     },
     "dependencies": {
         "express": "^4.18.2",
